--- a/Frontend/src/styles/Sidebar.css
+++ b/Frontend/src/styles/Sidebar.css
@@ -6,7 +6,7 @@
     width: 260px; 
     min-height: 100vh;
     /* Blue Gradient matching the images */
-    background: linear-gradient(180deg, #1890ff 0%, #0050b3 100%); 
+    background: linear-gradient(180deg, #1890ff 0%, #4889d8ff 100%); 
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -37,12 +37,12 @@
 }
 
 .logo-img {
-    width: 36px;
-    height: 36px;
+    width: 45px;
+    height: 45px;
     object-fit: contain;
-    background-color: #0d75b8; 
+    border-radius:15px;
     padding: 6px;
-    border-radius: 8px;
+  
 }
 
 .app-name h1 {
@@ -113,7 +113,8 @@
 
 .sidebar-bottom {
     padding: 16px;
-    background-color: rgba(0, 0, 0, 0.2);
+    /* background-color: rgba(166, 188, 236, 0.2); */
+    background: linear-gradient(180deg, #1890ff 0%, #4889d8ff 100%); 
     margin-top: auto;
     border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
@@ -122,7 +123,7 @@
     display: flex;
     align-items: center;
     gap: 12px;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(4, 86, 163, 0.3);
     padding: 12px;
     border-radius: 10px;
     transition: background-color 0.3s;
@@ -184,6 +185,11 @@
 .settings-icon,
 .logout-icon {
     font-size: 12px;
+}
+.profile-email {
+  font-size: 0.85rem;
+  color: #e2e6ecff;
+  margin-bottom: 4px;
 }
 
 /* ================================================= */
